--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="background">
+    <div class="card-nft">
+        <div class="g-img">
+            <div class="eye">
+                <img src="./images/icon-view.svg" alt="">
+            </div>
+            <img  class="img-eth" src="./images/image-equilibrium.jpg" alt="">
+        </div>
+        <h2 class="title">Equilibrium #3429</h2>
+        <p class="g-text">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="info">
+            <img src="./images/icon-ethereum.svg" alt="">
+            <p class="price">0.041 ETH</p>
+            <img class="right" src="./images/icon-clock.svg" alt="">
+            <p class="days">3 days left</p>
+        </div>
+        <div class="profile">
+            <img class="img-profile" src="./images/image-avatar.png" alt="">
+            <p class="info-profile">Creation of <span>Jules Wyvern</span></p>
+        </div>
+    </div>
 </body>
 </html>
